# mulmul

./: README.md  create-topics.yaml  skaffold.yaml
services/firehose/: Cargo.toml  Dockerfile  deployment.yaml
services/firehose/src/: main.rs
