[package]
name = "firehose"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atrium-api = "0.13.0"
atrium-xrpc = "0.7.0"
atrium-xrpc-client = "0.1.2"
atrium-xrpc-server = {git = "https://github.com/sugyan/atrium.git"}
ciborium = "0.2.1"
futures = "0.3.29"
rand = "0.8.5"
rs-car = "0.4.1"
tokio = { version = "1.34.0", features = ["full"] }
tokio-tungstenite = { version = "0.20.1", features = ["native-tls"] }
